syntax = "proto3";

package Shop.Application.DTOs.OrderDetail;

message OrderDetail {
    int32 id = 1;
    int32 count = 2;
    int64 price = 3;
    int64 detail_sum = 4;
    int64 discount = 5;
    int64 tax = 6;
    int64 total = 7;
    int32 product_id = 8;
    int32 product_stock_price_id = 9;
    string product_name = 10;
    string product_code = 11;
    string image = 12;
    string alt = 13;
    int32 order_id = 14;
    string store_name = 15;
}
